--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">ThermoLed Mobile Client</string>
+    <string name="get_temperature">Get Temperature</string>
+    <string name="led_on">Led On</string>
+    <string name="temperature_will_show_here">Temperature will show here</string>
+    <string name="host_hint">34.136.25.200</string>
+    <string name="port_hint">50051</string>
+    <string name="led_off">Led Off</string>
+    <string name="username_hint">Username</string>
+    <string name="password_hint">Password</string>
+    <string name="login">Login</string>
+    <string name="text_view_mean">Mean</string>
+    <string name="mean_text">0</string>
+    <string name="last_10_temperatures">Last 10 temperatures</string>
+    <string name="last_temperature">0</string>
+    <string name="temperatures">TEMPERATURES</string>
 </resources>
